--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 <div class="ofrecimientos">
     <h2 id="titulosofrecimientos">Algunos de nuestros servicios:</h2>
     <div>
-        <div class="cajaoservicios"></div>
-        <div class="cajaoservicios"></div>
-        <div class="cajaoservicios"></div>
-        <div class="cajaoservicios"></div>
+        <div class="cajaoservicios" id="caja1evidencia"></div>
+        <div class="cajaoservicios" id="caja2evidencia"></div>
+        <div class="cajaoservicios" id="caja3evidencia"></div>
+        <div class="cajaoservicios" id="caja4evidencia"></div>
     </div>
 </div>
 
