--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     
     <div class="baner">
-        <img class="banner-img" src="adult-hipster-son-fun-hugging-600nw-2285578203.jpg">
+        <img class="banner-img" src="banerimagen.jpg.jpg" alt="Imagen de banner">
     </div>
     
         <div class="bienvenida">
@@ -46,7 +46,7 @@
 <div class="ofrecimientos">
     <h2 id="titulosofrecimientos">Algunos de nuestros servicios:</h2>
     <div>
-        <div class="cajaoservicios" id="caja1evidencia"></div>
+        <div class="cajaoservicios" id="caja1evidencia" ></div>
         <div class="cajaoservicios" id="caja2evidencia"></div>
         <div class="cajaoservicios" id="caja3evidencia"></div>
         <div class="cajaoservicios" id="caja4evidencia"></div>
