--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         </div>
 
         <div class="izquierda">
-
             <div id="fritsbox">
                 <a class="paginasnavegacion" target="_blank" href="">Beneficios</a>
             </div>
@@ -28,9 +27,7 @@
             <div id="secundbox">
                 <a class="paginasnavegacion" target="_blank" href="">Contacto</a>
             </div>
-
         </div>
-
     </div>
     
     <div class="baner">
@@ -41,17 +38,31 @@
             <h1 id="logoletras" >Abrigo de amor.</h1>
             <p id="mensajebienvenida" >El <samp id="resalto">Centro de Protección Social al Adulto Mayor (CPSAM) Abrigo de Amor </samp> es un lugar dedicado al bienestar, la tranquilidad y el respeto por nuestros adultos mayores. Trabajamos cada día con cariño y profesionalismo para brindarles atención integral, en un ambiente seguro y acogedor que se siente como un verdadero hogar.</p>
         </div>
-
-
-<div class="ofrecimientos">
-    <h2 id="titulosofrecimientos">Algunos de nuestros servicios:</h2>
     <div>
-        <div class="cajaoservicios" id="caja1evidencia" ></div>
-        <div class="cajaoservicios" id="caja2evidencia"></div>
-        <div class="cajaoservicios" id="caja3evidencia"></div>
-        <div class="cajaoservicios" id="caja4evidencia"></div>
-    </div>
+
+<h2 id="muestra-actividades">Una breve muestra de nuestras actividades</h2>
+<div class="boximagenes">
+    <figure class="box-item">
+        <img class="imagen" src="Imagenes/fiesta.jpg" alt="Festejo de dias especiales">
+        <figcaption class="caption">Festejo de dias especiales.</figcaption>
+    </figure>
+
+    <figure class="box-item">
+        <img class="imagen" src="Imagenes/paseo con saludo.jpg" alt="Paseos recreativos">
+        <figcaption class="caption">Paseos recreativos.</figcaption>
+    </figure>
+
+    <figure class="box-item">
+        <img class="imagen" src="Imagenes/inder.jpg" alt="Actividades deportivas">
+        <figcaption class="caption">Actividades deportivas.</figcaption>
+    </figure>
+
+    <figure class="box-item">
+        <img class="imagen" src="Imagenes/tareas.jpg" alt="Terapias ocupacionales">
+        <figcaption class="caption">Terapias ocupacionales.</figcaption>
+    </figure>
 </div>
+<!-- ...existing code... -->
 
 
 </body>
