--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="box">
 
         <div class="dechecha">
-            <a href="https://www.twitch.tv">
+            <a href="index.html">
             <img id="imglogo" src="Logo sin fondo con letras.png" alt="Logo Abrigo de Amor" id="logoimg">
             </a>
         </div>
@@ -30,9 +30,13 @@
         </div>
     </div>
     
-    <div class="baner">
+<!-- ...existing code... -->
+<div class="baner">
+    <div class="baner-inner">
         <img class="banner-img" src="banerimagen.jpg.jpg" alt="Imagen de banner">
     </div>
+</div>
+<!-- ...existing code... -->
     
         <div class="bienvenida">
             <h1 id="logoletras" >Abrigo de amor.</h1>
@@ -43,8 +47,8 @@
 <h2 id="muestra-actividades">Una breve muestra de nuestras actividades</h2>
 <div class="boximagenes">
     <figure class="box-item">
-        <img class="imagen" src="Imagenes/fiesta.jpg" alt="Festejo de dias especiales">
-        <figcaption class="caption">Festejo de dias especiales.</figcaption>
+        <img class="imagen" src="Imagenes/fiesta.jpg" alt="Festejo de días especiales">
+        <figcaption class="caption">Festejo de días especiales.</figcaption>
     </figure>
 
     <figure class="box-item">
