--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADA</title>
+    <title>Abrigo de Amor</title>
 </head>
 <body>
     <div class="box">
 
         <div class="dechecha">
             <a href="index.html">
-            <img id="imglogo" src="Logo sin fondo con letras.png" alt="Logo Abrigo de Amor" id="logoimg">
+            <img id="imglogo" src="Imagenes/Logo sin fondo con letras.png" alt="Logo Abrigo de Amor" id="logoimg">
             </a>
         </div>
 
@@ -33,7 +33,7 @@
 <!-- ...existing code... -->
 <div class="baner">
     <div class="baner-inner">
-        <img class="banner-img" src="banerimagen.jpg.jpg" alt="Imagen de banner">
+        <img class="banner-img" src="Imagenes/banerimagen.jpg.jpg" alt="Imagen de banner">
     </div>
 </div>
 <!-- ...existing code... -->
