--- a/index.html
+++ b/index.html
@@ -66,7 +66,23 @@
         <figcaption class="caption">Terapias ocupacionales.</figcaption>
     </figure>
 </div>
-<!-- ...existing code... -->
+
+<div class="footer">
+    <H3>Redes Sociales</H3>
+    <a class="link-iconos" href="https://www.instagram.com/abrigodeamormedellin" target="_blank">
+        <img class="iconos" src="Imagenes/ICONOS/instagram.png" alt="instagram">
+    </a>
+    <a class="link-iconos" href="https://www.facebook.com/profile.php?id=100063911390001" target="_blank">
+        <img class="iconos" src="Imagenes/ICONOS/facebook.png" alt="facebook">
+    </a>
+    <a class="link-iconos" href="https://wa.me/573216707071" target="_blank">
+        <img class="iconos" src="Imagenes/ICONOS/whatsapp.png" alt="whatsapp">
+    </a>
+    <a class="link-iconos" href="https://www.google.com/maps/place/Hogar+geriátrico+abrigo+de+amor/data=!4m2!3m1!1s0x0:0x25a504107dab84f4?sa=X&ved=1t:2428&ictx=111" target="_blank">
+        <img class="iconos" src="Imagenes/ICONOS/mapa.png" alt="Ubicación">
+    </a>
+    <p id="derechos" >© 2025 CPSAM Abrigo de Amor. Todos los derechos reservados.</p>
+</div>
 
 
 </body>
