--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </figure>
 
     <figure class="box-item">
-        <img class="imagen" src="Imagenes/inder.jpg" alt="Actividades deportivas">
-        <figcaption class="caption">Actividades deportivas.</figcaption>
+        <img class="imagen" src="Imagenes/inder.jpg" alt="Dinamicas">
+        <figcaption class="caption">Dinamicas sociales.</figcaption>
     </figure>
 
     <figure class="box-item">
