--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
         <div class="izquierda">
             <div id="fritsbox">
-                <a class="paginasnavegacion" target="_blank" href="">Beneficios</a>
+                <a class="paginasnavegacion" href="">Beneficios</a>
             </div>
 
             <div id="secundbox">
-                <a class="paginasnavegacion" target="_blank" href="">Nosotros</a>
+                <a class="paginasnavegacion" href="HTML/nosotros.html">Nosotros</a>
             </div>
 
             <div id="secundbox">
-                <a class="paginasnavegacion" target="_blank" href="">Contacto</a>
+                <a class="paginasnavegacion" href="">Contacto</a>
             </div>
         </div>
     </div>
