--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -87,16 +87,16 @@
 <div class="footer">
     <H3>Redes Sociales</H3>
     <a class="link-iconos" href="https://www.instagram.com/abrigodeamormedellin" target="_blank">
-        <img class="iconos" src="Imagenes/ICONOS/instagram.png" alt="instagram">
+        <img class="iconos" src="../Imagenes/ICONOS/instagram.png" alt="Instagram">
     </a>
     <a class="link-iconos" href="https://www.facebook.com/profile.php?id=100063911390001" target="_blank">
-        <img class="iconos" src="Imagenes/ICONOS/facebook.png" alt="facebook">
+        <img class="iconos" src="../Imagenes/ICONOS/facebook.png" alt="Facebook">
     </a>
     <a class="link-iconos" href="https://wa.me/573216707071" target="_blank">
-        <img class="iconos" src="Imagenes/ICONOS/whatsapp.png" alt="whatsapp">
+        <img class="iconos" src="../Imagenes/ICONOS/whatsapp.png" alt="Whatsapp">
     </a>
     <a class="link-iconos" href="https://www.google.com/maps/place/Hogar+geriátrico+abrigo+de+amor/data=!4m2!3m1!1s0x0:0x25a504107dab84f4?sa=X&ved=1t:2428&ictx=111" target="_blank">
-        <img class="iconos" src="Imagenes/ICONOS/mapa.png" alt="Ubicación">
+        <img class="iconos" src="../Imagenes/ICONOS/mapa.png" alt="Ubicación">
     </a>
     <p id="derechos" >© 2025 CPSAM Abrigo de Amor. Todos los derechos reservados.</p>
 </div>
