--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -9,7 +9,7 @@
 <body>
     <div class="box">
       <div class="dechecha">
-        <a href="index.html">
+        <a href="../index.html">
           <img
             id="imglogo"
             src="../Imagenes/Logo sin fondo con letras.png"
@@ -21,11 +21,11 @@
 
       <div class="izquierda">
         <div id="fritsbox">
-          <a class="paginasnavegacion" href="../index.html">Inicio</a>
+          <a class="paginasnavegacion" href="">Beneficios</a>
         </div>
 
         <div id="secundbox">
-          <a class="paginasnavegacion" href="HTML/nosotros.html">Nosotros</a>
+          <a class="paginasnavegacion" href="../HTML/nosotros.html">Nosotros</a>
         </div>
 
         <div id="secundbox">
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="boxtextos">
-      <h1 id="titulonosotros">SOBRE NOSOTROS</h1>
+      <h1 id="titulonosotros">Sobre Nosotros</h1>
       <h2>Valores</h2>
       <p>
         En el Centro de Protección Social al Adulto Mayor (CPSAM) nos definen y
