--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -21,11 +21,11 @@
 
       <div class="izquierda">
         <div id="fritsbox">
-          <a class="paginasnavegacion" href="">Beneficios</a>
+          <a class="paginasnavegacion" href="../index.html">Inicio</a>
         </div>
 
         <div id="secundbox">
-          <a class="paginasnavegacion" href="../HTML/nosotros.html">Nosotros</a>
+          <a class="paginasnavegacion" href="beneficios.html">Beneficios</a>
         </div>
 
         <div id="secundbox">
