--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="izquierda">
             <div id="fritsbox">
-                <a class="paginasnavegacion" href="">Beneficios</a>
+                <a class="paginasnavegacion" href="HTML/beneficios.html">Beneficios</a>
             </div>
 
             <div id="secundbox">
