--- a/HTML/beneficios.html
+++ b/HTML/beneficios.html
@@ -35,52 +35,85 @@
     </div>
 
     <div class="boxbeneficios">
-      <h1>Principales Beneficios</h1>
+      <h1 id="titulobeneficios">Principales Beneficios</h1>
+    </div>
+
+    <div id="boxtexto">
       <p>
-        En <span id="resalto">CPSAM Abrigo de amor</span>, estamos enfocados y comprometidos con el
-        bienestar de nuestros usuarios y sus familias. Por lo que ofrecemos
-        diversos beneficios que contribuyen a mejorar su calidad de vida. Algunos
-        de los principales beneficios que ofrecemos incluyen:
+        En <span id="resalto">CPSAM Abrigo de amor</span>, estamos enfocados y
+        comprometidos con el bienestar de nuestros usuarios y sus familias. Por
+        lo que ofrecemos diversos beneficios que contribuyen a mejorar su
+        calidad de vida. Algunos de los principales beneficios que ofrecemos
+        incluyen:
       </p>
     </div>
 
-    <div class="listabeneficios">
+    
+    <div id="boxcontenedor">
+      <div id="boximagen">
+        <img
+          src="../Imagenes/475270595_1060949642712072_3939578319302466397_n.jpg"
+          alt="IMAGEN DE SERVICIOS"
+          id="imagenbeneficios"
+        />
+      </div>
+      
+      <div class="listado">
         <ul>
-            <li>Cuidado de adultos mayores.</li>
-            <li>Enfermeria 24 horas.</li>
-            <li>Alimentacion balanceada.</li>
-            <li>Control médico y gerontológico.</li>
-            <li>Asesoramiento y control nutricional.</li>
-            <li>Terapia fisica y ocupacional.</li>
-            <li>Lavandería.</li>
-            <li>Servicios religiosos.</li>
-            <li>Habitaciones compartidas e individuales.</li>
+          <li>Cuidado de adultos mayores.</li>
+          <li>Enfermeria 24 horas.</li>
+          <li>Alimentacion balanceada.</li>
+          <li>Control médico y gerontológico.</li>
+          <li>Asesoramiento y control nutricional.</li>
+          <li>Terapia fisica y ocupacional.</li>
+          <li>Lavandería.</li>
+          <li>Servicios religiosos.</li>
+          <li>Habitaciones compartidas e individuales.</li>
         </ul>
+      </div>
     </div>
 
-    <div>
-    <img
-        src="../Imagenes/servicios.jpg"
-        alt="IMAGEN DE SERVICIOS"
-        id="imagenbeneficios"/>
+    <div class="footer">
+      <h3>Redes Sociales</h3>
+      <a
+        class="link-iconos"
+        href="https://www.instagram.com/abrigodeamormedellin"
+        target="_blank"
+      >
+        <img
+          class="iconos"
+          src="../Imagenes/ICONOS/instagram.png"
+          alt="Instagram"
+        />
+      </a>
+      <a
+        class="link-iconos"
+        href="https://www.facebook.com/profile.php?id=100063911390001"
+        target="_blank"
+      >
+        <img
+          class="iconos"
+          src="../Imagenes/ICONOS/facebook.png"
+          alt="Facebook"
+        />
+      </a>
+      <a class="link-iconos" href="https://wa.me/573216707071" target="_blank">
+        <img
+          class="iconos"
+          src="../Imagenes/ICONOS/whatsapp.png"
+          alt="Whatsapp"
+        />
+      </a>
+      <a
+        class="link-iconos"
+        href="https://www.google.com/maps/place/Hogar+geriátrico+abrigo+de+amor/data=!4m2!3m1!1s0x0:0x25a504107dab84f4?sa=X&ved=1t:2428&ictx=111"
+        target="_blank"
+      >
+        <img class="iconos" src="../Imagenes/ICONOS/mapa.png" alt="Ubicación" />
+      </a>
+      <p id="derechos">
+        © 2025 CPSAM Abrigo de Amor. Todos los derechos reservados.
+      </p>
     </div>
-
-<div class="footer">
-    <H3>Redes Sociales</H3>
-    <a class="link-iconos" href="https://www.instagram.com/abrigodeamormedellin" target="_blank">
-        <img class="iconos" src="../Imagenes/ICONOS/instagram.png" alt="Instagram">
-    </a>
-    <a class="link-iconos" href="https://www.facebook.com/profile.php?id=100063911390001" target="_blank">
-        <img class="iconos" src="../Imagenes/ICONOS/facebook.png" alt="Facebook">
-    </a>
-    <a class="link-iconos" href="https://wa.me/573216707071" target="_blank">
-        <img class="iconos" src="../Imagenes/ICONOS/whatsapp.png" alt="Whatsapp">
-    </a>
-    <a class="link-iconos" href="https://www.google.com/maps/place/Hogar+geriátrico+abrigo+de+amor/data=!4m2!3m1!1s0x0:0x25a504107dab84f4?sa=X&ved=1t:2428&ictx=111" target="_blank">
-        <img class="iconos" src="../Imagenes/ICONOS/mapa.png" alt="Ubicación">
-    </a>
-    <p id="derechos" >© 2025 CPSAM Abrigo de Amor. Todos los derechos reservados.</p>
-</div>
-
   </body>
 </html>
