--- a/HTML/beneficios.html
+++ b/HTML/beneficios.html
@@ -9,7 +9,7 @@
   <body>
     <div class="box">
       <div class="dechecha">
-        <a href="index.html">
+        <a href="../index.html">
           <img
             id="imglogo"
             src="../Imagenes/Logo sin fondo con letras.png"
@@ -29,7 +29,7 @@
         </div>
 
         <div id="secundbox">
-          <a class="paginasnavegacion" href="">Contacto</a>
+          <a class="paginasnavegacion" href="contacto.html">Contacto</a>
         </div>
       </div>
     </div>
