--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -29,7 +29,7 @@
         </div>
 
         <div id="secundbox">
-          <a class="paginasnavegacion" href="">Contacto</a>
+          <a class="paginasnavegacion" href="contacto.html">Contacto</a>
         </div>
       </div>
     </div>
