--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div id="secundbox">
-                <a class="paginasnavegacion" href="">Contacto</a>
+                <a class="paginasnavegacion" href="HTML/contacto.html">Contacto</a>
             </div>
         </div>
     </div>
