--- a/HTML/beneficios.html
+++ b/HTML/beneficios.html
@@ -25,6 +25,10 @@
         </div>
 
         <div id="secundbox">
+          <a class="paginasnavegacion" href="../HTML/beneficios.html">Beneficios</a>
+        </div>
+
+        <div id="secundbox">
           <a class="paginasnavegacion" href="../HTML/nosotros.html">Nosotros</a>
         </div>
 
@@ -50,9 +54,7 @@
     </div>
 
     
-    <div id="boxcontenedor">
-
-      
+    <div id="boxcontenedor">   
       <div class="listado">
         <ul>
           <li>Cuidado de adultos mayores.</li>
