--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -23,23 +23,30 @@
         <div id="fritsbox">
           <a class="paginasnavegacion" href="../index.html">Inicio</a>
         </div>
-
+        
         <div id="secundbox">
-          <a class="paginasnavegacion" href="../HTML/nosotros.html">Nosotros</a>
+          <a class="paginasnavegacion" href="beneficios.html">Beneficios</a>
         </div>
 
         <div id="secundbox">
-          <a class="paginasnavegacion" href="contacto.html">Beneficios</a>
-        </div>
+        <a class="paginasnavegacion" href="../HTML/nosotros.html">Nosotros</a>
+      </div>
+
+      <div id="secundbox">
+        <a class="paginasnavegacion" href="../HTML/contacto.html">Contácto</a>
+      </div>
+
       </div>
     </div>
 
-    <div class="boxcontacto">
-      <h1>Contacto</h1>
-      <p>
-        Te dejamos todos nuestros números de contacto para que te comuniques con
-        nosotros, pero también puedes dejarnos tu número y nosotros te llamamos.
+    <div class="parradocontacto">
+      <h1 class="titulocontacto">Contacto</h1>
+      <p >
+        Dejanos tus datos y un mensaje, apenas lo veamos nos pondremos en contacto contigo o puedes escribirnos directamente a las lineas de contácto que te dejamos al píe de pagína.
       </p>
+</div>
+
+<div class="boxcontacto">
 <form id="contact-form">
   <h2>Contáctanos</h2>
 
@@ -85,6 +92,48 @@
     </div>
 
 
+    <div class="footer">
+      <h3>Redes Sociales</h3>
+      <a
+        class="link-iconos"
+        href="https://www.instagram.com/abrigodeamormedellin"
+        target="_blank"
+      >
+        <img
+          class="iconos"
+          src="../Imagenes/ICONOS/instagram.png"
+          alt="Instagram"
+        />
+      </a>
+      <a
+        class="link-iconos"
+        href="https://www.facebook.com/profile.php?id=100063911390001"
+        target="_blank"
+      >
+        <img
+          class="iconos"
+          src="../Imagenes/ICONOS/facebook.png"
+          alt="Facebook"
+        />
+      </a>
+      <a class="link-iconos" href="https://wa.me/573216707071" target="_blank">
+        <img
+          class="iconos"
+          src="../Imagenes/ICONOS/whatsapp.png"
+          alt="Whatsapp"
+        />
+      </a>
+      <a
+        class="link-iconos"
+        href="https://www.google.com/maps/place/Hogar+geriátrico+abrigo+de+amor/data=!4m2!3m1!1s0x0:0x25a504107dab84f4?sa=X&ved=1t:2428&ictx=111"
+        target="_blank"
+      >
+        <img class="iconos" src="../Imagenes/ICONOS/mapa.png" alt="Ubicación" />
+      </a>
+      <p id="derechos">
+        © 2025 CPSAM Abrigo de Amor. Todos los derechos reservados.
+      </p>
+    </div>
 
   </body>
 </html>
