--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -29,6 +29,10 @@
         </div>
 
         <div id="secundbox">
+          <a class="paginasnavegacion" href="nosotros.html">Nosotros</a>
+        </div>
+
+        <div id="secundbox">
           <a class="paginasnavegacion" href="contacto.html">Contacto</a>
         </div>
       </div>
