contenderoes de nosotros

--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -35,6 +35,7 @@
     </div>
     <h1 id="titulonosotros">Sobre Nosotros</h1>
     <div class="boxtextos">
+      <div class="contenendores">
       <h2>Valores</h2>
       <p>
         En el Centro de Protección Social al Adulto Mayor (CPSAM) nos definen y
@@ -43,6 +44,8 @@
         nuestra dedicación a proporcionar un entorno seguro, acogedor y
         enriquecedor para nuestros adultos mayores.
       </p>
+      </div>
+        <div class="contenendores">
           <h2>Visión</h2>
           <p>
             En el año 2030 el centro de protección social al adulto mayor CPSAM
@@ -53,7 +56,8 @@
             comoda, moderna, ampia y diversa en aras hacia un mejoramiento
             continuo que nos permita crecer diariamente.
           </p>
-
+      </div>
+      <div class="contenendores">
       <h2>Misión</h2>
       <p>
         Somos un centro de protección social al adulto mayor CPSAM, que brinda a
@@ -65,6 +69,8 @@
         eficiente en un ambiente de respeto en el que se prime el bienestar de
         los usuarios.
       </p>
+      </div>
+      <div class="contenendores">
       <h2>Objetivos</h2>
       <p>
         El objetivo permanente del centro de protección social al adulto mayor
@@ -78,6 +84,7 @@
         los requisitos legales permitiéndonos el crecimiento continuo y la
         prestación de servicios de calidad.
       </p>
+      </div>
     </div>
 
 <div class="footer">
