--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 
                 <div id="secundbox">
-                    <a class="paginasnavegacion" href="#titulonosotros">Nosotros</a>
+                    <a class="paginasnavegacion" href="HTML/nosotros.html">Nosotros</a>
                 </div>
                 
                 <div id="secundbox">
@@ -112,7 +112,7 @@
 <section>
     <div id="nosotros">
 
-        <h1 id="titulonosotros">Sobre nosotros</h1>
+        <h1 id="titulonosotros">Sobre Nosotros</h1>
 
         <!-- Fila 1 -->
         <div class="fila">
