--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 
                 <div id="secundbox">
-                    <a class="paginasnavegacion" href="HTML/nosotros.html">Nosotros</a>
+                    <a class="paginasnavegacion" href="#nosotros">Nosotros</a>
                 </div>
                 
                 <div id="secundbox">
